--- a/2024_01_05.ipynb
+++ b/2024_01_05.ipynb
@@ -269,15 +269,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f215d4b1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from itertools import combinations"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "33dd179f",
    "metadata": {},
    "outputs": [],
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "id": "67725dc4",
    "metadata": {},
    "outputs": [],
@@ -296,30 +298,33 @@
     "    return list(itertools.permutations(nums))\n",
     "\n",
     "def combine_tool(n,k):\n",
-    "    return list(itertools.combinations(range(1,n+1),k))"
+    "    return combinations(range(1,n+1),k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "id": "fbb7c699",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(1, 2), (1, 3), (1, 4), (2, 3), (2, 4), (3, 4)]"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "[1, 3]\n",
+      "[1, 4]\n",
+      "[2, 3]\n",
+      "[2, 4]\n",
+      "[3, 4]\n"
+     ]
     }
    ],
    "source": [
     "nums = [1,2,3,4]\n",
-    "permute(nums)\n",
-    "combine(4,2)"
+    "# permute(nums)\n",
+    "for x in combine_tool(4,2):\n",
+    "    print(list(x))"
    ]
   },
   {
