--- a/2024_01_06.ipynb
+++ b/2024_01_06.ipynb
@@ -251,7 +251,7 @@
     "N,M = map(int, input().split())\n",
     "card_num = list(map(int, input().split()))\n",
     "\n",
-    "combi_sum = [sum(combi) forㄴ combi in itertools.combinations(card_num, 3) if sum(combi)<=M]\n",
+    "combi_sum = [sum(combi) for combi in itertools.combinations(card_num, 3) if sum(combi)<=M]\n",
     "\n",
     "print(max(combi_sum))"
    ]
