--- a/2024_01_09.ipynb
+++ b/2024_01_09.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74918860",
+   "id": "7502edf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "29838b37",
+   "id": "ed9bb989",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf25e5b1",
+   "id": "31efff18",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "091ce075",
+   "id": "46f2cd09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "aedb8b5c",
+   "id": "f79f9c1a",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "509a1879",
+   "id": "5b46acec",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "af1f68e6",
+   "id": "24ba2fdf",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "069a0f8b",
+   "id": "e58968e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8f70130",
+   "id": "d618df51",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f17fdc1a",
+   "id": "4384b13c",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "637cc51a",
+   "id": "2c99f9c3",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "16c219f2",
+   "id": "f43f589b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "20db496f",
+   "id": "9f43f27f",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "688e774f",
+   "id": "32c06669",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39d10e91",
+   "id": "b1d9390b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "2839525c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# leetcode 743 풀이\n",
+    "def networkDelayTime(times, N,K):\n",
+    "    graph = collections.defaultdict(list)\n",
+    "    for u,v,w in times:\n",
+    "        graph[u].append((v,w))\n",
+    "    \n",
+    "    Q = [(0,K)]\n",
+    "    dist = collections.defaultdict(int)\n",
+    "    \n",
+    "    while Q:\n",
+    "        time, node = heapq.heappop(Q)\n",
+    "        if node not in dist:\n",
+    "            dist[node] = time\n",
+    "            for v,w in graph[node]:\n",
+    "                alt = time +w\n",
+    "                heapq.heappush(Q,(alt,v))\n",
+    "    \n",
+    "    if len(dist)==N:\n",
+    "        return max(dist.values())\n",
+    "    return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c83d349d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -359,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c32173c1",
+   "id": "777dc48d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -367,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f200c36",
+   "id": "7dad4d4a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -375,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42a066f5",
+   "id": "3859c027",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -383,23 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d323fde",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06837922",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98f1cd62",
+   "id": "d3fd2a7a",
    "metadata": {},
    "outputs": [],
    "source": []
